Update document handle feedback